# ai-autograding-feedback

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  code_processing.py  image_processing.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
ai_feedback/: __main__.py  code_processing.py  image_processing.py  text_processing.py
ai_feedback/helpers/: arg_options.py  constants.py  file_converter.py  hyperparam_helpers.py  image_extractor.py  image_reader.py  model_options_helpers.py  template_utils.py
ai_feedback/models/: ClaudeModel.py  CodeLlamaModel.py  DeepSeekModel.py  DeepSeekV3Model.py  DeepseekV3Model.py  Model.py  OpenAIModel.py  OpenAIModelVector.py  RemoteModel.py  __init__.py
ggr274_homework5/image_test1/: Homework_5_submission.ipynb  solution.ipynb
ggr274_homework5/image_test2/: student_submission.ipynb
ggr274_homework5/image_test3/: solution.ipynb
ggr274_homework5/test1/: student_submission.ipynb
ggr274_homework5/test2/: Homework_5_Solutions.txt  student_submission.ipynb  student_submission.txt  test2_error_output.txt
ggr274_homework5/test4/: Homework_5_Solutions.txt  student_submission.ipynb
ggr274_homework5/test5/: Homework_5_Solutions.ipynb  Homework_5_Solutions.txt  student_submission.txt  test5_error_output.txt
helpers/: arg_options.py  constants.py  file_converter.py  image_extractor.py  image_reader.py  output_template.md
markus_test_scripts/: custom_tester_llm_image.sh  python_tester_llm_image_analyze_annotations_claude.py  python_tester_llm_image_annotations.py  python_tester_llm_image_annotations_openai.py  python_tester_llm_image_style_annotations_claude.py  run_llm_annotation.py  run_llm_combined.py  run_llm_feedback.py  run_llm_jupyter.sh  run_llm_jupyter_custom.sh  run_llm_py.py
models/: ClaudeModel.py  CodeLlamaModel.py  DeepSeekModel.py  Model.py  OpenAIModel.py  OpenAIModelVector.py
presentation_materials/: Example_commands.md
promptfoo/: README.md  promptfoo_test_runner.py
prompts/: code_explanation.json  code_hint.json  code_lines.json  code_table.json  code_template.json  image_analyze.json  image_analyze_annotations.json  image_compare.json  image_style.json  image_style_annotations.json
tests/: integration_tests.py  test_helper.py  test_load_content_fallback.py
(+212 files in other folders)
